# autonomous_warehouse_surveillance

./: .gitignore  README.md
offboard/ros_workspace/docs/: README.md
offboard/ros_workspace/src/warehouse_navigation/: package.xml  setup.cfg  setup.py
offboard/ros_workspace/src/warehouse_navigation/config/: default.rviz  ekf.yaml  nav2_params.yaml
offboard/ros_workspace/src/warehouse_navigation/launch/: explore_shelf.launch.py
offboard/ros_workspace/src/warehouse_navigation/warehouse_navigation/: frontier_exploration.py  navigate_to_shelf.py  shelf_detector.py  vertical_mechanism.py
offboard/ros_workspace/src/warehouse_robot_bringup/: CMakeLists.txt  package.xml
offboard/ros_workspace/src/warehouse_robot_bringup/launch/: offboard.launch.py
offboard/ros_workspace/src/warehouse_robot_bringup/warehouse_robot_bringup/: laser_filter.py  motor_command_controller.py  velocity_scaler.py
offboard/warehouse_hmi/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
offboard/warehouse_hmi/src/: index.css
offboard/warehouse_hmi/src/components/: BatteryPanel.tsx  ConnectionConfig.tsx  ConnectionStatus.tsx  DataPanel.tsx  DataValue.tsx  Header.tsx  IMUPanel.tsx  MapViewer.tsx  QRImagePanel.tsx  SensorPanel.tsx  TopicMonitor.tsx  VelocityPanel.tsx
offboard/warehouse_hmi/src/hooks/: useROS.ts
offboard/warehouse_hmi/src/pages/: Index.tsx
onboard/esp32/: platformio.ini
onboard/esp32/src/: commands.h  diff_controller.h  encoder_driver.cpp  encoder_driver.h  main.cpp  motor_driver.cpp  motor_driver.h  stepper_driver.cpp  stepper_driver.h
onboard/ros_workspace/: README.md  requirements.txt
onboard/ros_workspace/src/hardware/: CMakeLists.txt  package.xml  robot_hardware.xml
onboard/ros_workspace/src/hardware/include/hardware/: config.h  esp_comms.h  mecanumdrive_esp.h  wheel.h
onboard/ros_workspace/src/hardware/src/: esp_comms.cpp  mecanumdrive_esp.cpp  wheel.cpp
onboard/ros_workspace/src/sensors/: package.xml  setup.cfg  setup.py
onboard/ros_workspace/src/sensors/launch/: sensors.launch.py
onboard/ros_workspace/src/sensors/sensors/: bno055_node.py
onboard/ros_workspace/src/serial/examples/: serial_example.cc
onboard/ros_workspace/src/serial/tests/: unix_serial_tests.cc
onboard/ros_workspace/src/stepper_motor/: CMakeLists.txt  package.xml
onboard/ros_workspace/src/stepper_motor/config/: stepper_motor_params.yaml
onboard/ros_workspace/src/stepper_motor/include/: stepper_motor_controller.h
onboard/ros_workspace/src/stepper_motor/launch/: stepper_motor.launch.py
onboard/ros_workspace/src/stepper_motor/src/: stepper_motor_controller.cpp  stepper_motor_node.cpp  stepper_motor_teleop.cpp
onboard/ros_workspace/src/warehouse_robot_bringup/: CMakeLists.txt
onboard/ros_workspace/src/warehouse_robot_bringup/config/: my_robot_controllers.yaml
onboard/ros_workspace/src/warehouse_robot_bringup/launch/: onboard.launch.py  websoc.launch.py
onboard/ros_workspace/src/warehouse_robot_description/: CMakeLists.txt  package.xml
onboard/ros_workspace/src/warehouse_robot_description/urdf/: common_properties.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  my_robot.urdf.xacro
onboard/ros_workspace/src/warehouse_scanning/: package.xml  setup.cfg  setup.py
onboard/ros_workspace/src/warehouse_scanning/launch/: qr_scanning.launch.py
onboard/ros_workspace/src/warehouse_scanning/warehouse_scanning/: qr_detection.py
onboard/ros_workspace/src/warehouse_scanning/warehouse_scanning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
onboard/ros_workspace/src/ydlidar_ros2_driver/: README.md
onboard/ros_workspace/src/ydlidar_ros2_driver/launch/: ydlidar_launch.py
onboard/ros_workspace/src/ydlidar_ros2_driver/params/: ydlidar.yaml
